# watchdoc

./: CLAUDE.md  LICENSE  Makefile  README.md  go.mod  go.sum  main.go  pyproject.toml  watchdoc.json
cmd/: init.go  init_test.go  root.go  scan.go  scan_test.go  watch.go  watch_test.go
internal/: config.go
internal/lib/: config.go  header.go
src/watchdoc/: cli.py  config.py  filewatcher.py  generator.py  main.py
