[project]
name = "watchdoc-cli"
version = "1.0.2"
description = "Automates creation of file headers for source code."
requires-python = ">=3.14"
dependencies = [
    "watchdog>=6.0.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
watchdoc = "watchdoc.main:main"